--- a/.github/workflows/sims_pipeline.yml
+++ b/.github/workflows/sims_pipeline.yml
@@ -1,60 +1,88 @@
-name: SimS Unified Pipeline
+name: sims_pipeline
 
 on:
   workflow_dispatch:
     inputs:
-      date:
-        description: '予測日 (例: 20250820)'
+      DATE:
+        description: "日付 (例: 20250820)"
         required: true
-      pids:
-        description: '場コード (例: 01,04)'
+        type: string
+      PIDS:
+        description: "場コード（例: 01,02,...）"
+        required: true
+        type: string
+      SIMS:
+        description: "試行回数（例: 600）"
         required: false
-        default: ''
-      races:
-        description: 'レース番号 (例: 1R,2R)'
+        default: "600"
+        type: string
+      TOPN:
+        description: "三連単 TopN（例: 18）"
         required: false
-        default: ''
-      sims:
-        description: '試行回数'
+        default: "18"
+        type: string
+      UNIT:
+        description: "1点あたりの金額（例: 100）"
         required: false
-        default: '1200'
-      topn:
-        description: '上位N件出力'
+        default: "100"
+        type: string
+      MODE:
+        description: "モード（predict または eval）"
+        required: true
+        default: "predict"
+        type: string
+      FILTERS:
+        description: "フィルター文字列"
         required: false
-        default: '18'
-      limit:
-        description: '先頭からNレースだけ処理 (0=全件)'
+        default: ""
+        type: string
+      KEYMAN:
+        description: "キーマンパラメータ"
         required: false
-        default: '0'
+        default: ""
+        type: string
+      OUTDIR:
+        description: "出力ディレクトリ"
+        required: false
+        default: "scripts/sims"
+        type: string
 
 jobs:
   pass3:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Run pass3 for all PIDs
+        env:
+          DATE: ${{ inputs.DATE }}
+          PIDS: ${{ inputs.PIDS }}
+          SIMS: ${{ inputs.SIMS }}
+          TOPN: ${{ inputs.TOPN }}
+          UNIT: ${{ inputs.UNIT }}
+          MODE: ${{ inputs.MODE }}
+          FILTERS: ${{ inputs.FILTERS }}
+          KEYMAN: ${{ inputs.KEYMAN }}
+          OUTDIR: ${{ inputs.OUTDIR }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          IFS=',' read -ra PID_ARR <<< "${{ github.event.inputs.pids }}"
+          set -euo pipefail
+
+          IFS=',' read -ra PID_ARR <<< "$PIDS"
+
           for PID in "${PID_ARR[@]}"; do
             echo "Launching wf_pass3_sims_integrated for PID=$PID"
-            curl -X POST \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/${{ github.repository }}/actions/workflows/wf_pass3_sims_integrated.yml/dispatches \
-              -d "$(jq -n \
-                --arg ref "${{ github.ref }}" \
-                --arg date "${{ github.event.inputs.date }}" \
-                --arg mode "predict" \
-                --arg unit "default" \
-                --arg sims "${{ github.event.inputs.sims }}" \
-                --arg topn "${{ github.event.inputs.topn }}" \
-                --arg pids "$PID" \
-                --arg races "${{ github.event.inputs.races }}" \
-                --arg limit "${{ github.event.inputs.limit }}" \
-                '{ref: $ref, inputs: {date: $date, mode: $mode, unit: $unit, sims: $sims, topn: $topn, pids: $pids, races: $races, limit: $limit}}')"
+
+            gh workflow run wf_pass3_sims_integrated.yml \
+              --ref main \
+              -f DATE="$DATE" \
+              -f PID="$PID" \
+              -f MODE="$MODE" \
+              -f SIMS="$SIMS" \
+              -f TOPN="$TOPN" \
+              -f UNIT="$UNIT" \
+              -f FILTERS="$FILTERS" \
+              -f KEYMAN="$KEYMAN" \
+              -f OUTDIR="$OUTDIR"
           done
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
