--- a/.github/workflows/sims_pipeline.yml
+++ b/.github/workflows/sims_pipeline.yml
@@ -4,278 +4,206 @@ on:
   workflow_dispatch:
     inputs:
       DATE:
-        description: "YYYYMMDD"
+        description: "対象日 (YYYYMMDD)"
         required: true
         type: string
-      PID:
-        description: "01..24, all/空=全場（カンマ区切り可）"
+      PIDS:
+        description: "カンマ区切りの開催ID。未指定なら01-24全部"
         required: false
-        default: "all"
         type: string
-      MODE:
-        description: "predict or eval"
-        required: true
-        type: choice
-        options: [predict, eval]
-        default: predict
+        default: ""
       SIMS:
-        description: "試行回数/レース"
-        required: true
+        description: "SimSの試行回数/レース"
+        required: false
+        type: string
         default: "600"
-        type: string
       TOPN:
-        description: "三連単 TOPN"
-        required: true
-        default: "18"
+        description: "三連単のTOPN"
+        required: false
         type: string
+        default: "18"
       UNIT:
         description: "1点あたり(円)"
-        required: true
-        default: "100"
-        type: string
-      OUTDIR:
-        description: "出力ディレクトリ（simsv2 出力ルート）"
-        required: true
-        default: "scripts/sims"
-        type: string
-      FILTERS:
-        description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19,exclude_first1=false,only_first1=false,odds_min=0,odds_max=0"
         required: false
-        default: ""
         type: string
+        default: "100"
+      OUTDIR:
+        description: "出力ルート(例: scripts/sims)"
+        required: false
+        type: string
+        default: "scripts/sims"
 
 permissions:
   contents: write
 
 jobs:
-  normalize-parse:
+  prepare:
     runs-on: ubuntu-latest
     outputs:
-      PID_EXP: ${{ steps.pidnorm.outputs.PID_EXP }}
-      # filters
-      F_REQUIRE_ODDS:   ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
-      F_MIN_EV:         ${{ steps.parse.outputs.F_MIN_EV }}
-      F_ODDS_BANDS:     ${{ steps.parse.outputs.F_ODDS_BANDS }}
-      F_ODDS_MIN:       ${{ steps.parse.outputs.F_ODDS_MIN }}
-      F_ODDS_MAX:       ${{ steps.parse.outputs.F_ODDS_MAX }}
-      F_EXCLUDE_FIRST1: ${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}
-      F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
+      pid_list: ${{ steps.split.outputs.pids_json }}
     steps:
-      - name: PID normalize (all/空→01..24、ゼロ詰め)
-        id: pidnorm
-        shell: bash
-        run: |
-          set -euo pipefail
-          PID_IN="${{ inputs.PID }}"
-          PID_TRIM="$(echo "${PID_IN:-}" | tr '[:space:]' ' ' | xargs)"
-          if [ -z "$PID_TRIM" ] || [ "${PID_TRIM,,}" = "all" ]; then
-            ALL=""
-            for i in $(seq -w 01 24); do ALL="${ALL}${i},"; done
-            PID_EXP="${ALL%,}"
-          else
-            PID_NORM="$(echo "$PID_TRIM" | tr '、，;|' ',')"
-            OUT=""
-            IFS=',' read -r -a arr <<< "$PID_NORM"
-            for p in "${arr[@]}"; do
-              p="$(echo "$p" | xargs)"; [ -z "$p" ] && continue
-              if [[ "$p" =~ ^[0-9]+$ ]]; then
-                printf -v two "%02d" "$p"
-                OUT="${OUT}${two},"
-              fi
-            done
-            PID_EXP="${OUT%,}"
-          fi
-          echo "PID_EXP=$PID_EXP" | tee -a "$GITHUB_OUTPUT"
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Parse FILTERS (キーマン無し)
-        id: parse
+      - id: split
+        name: Build PID matrix JSON
         env:
-          FILTERS: ${{ inputs.FILTERS }}
-        shell: bash
+          PIDS_IN: ${{ inputs.PIDS }}
         run: |
-          set -euo pipefail
-          parse_kvlist () {
-            local s="$1"
-            IFS=',' read -r -a pairs <<< "$s"
-            for kv in "${pairs[@]}"; do
-              kv="$(echo "$kv" | xargs)"
-              [ -z "$kv" ] && continue
-              if [[ "$kv" == *"="* ]]; then
-                k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
-                v="$(echo "${kv#*=}" | xargs)"
-                echo "${k}=${v}" >> kv.out
-              fi
-            done
-          }
-          # defaults
-          {
-            echo "F_REQUIRE_ODDS=false"
-            echo "F_MIN_EV=0"
-            echo "F_ODDS_BANDS="
-            echo "F_ODDS_MIN=0"
-            echo "F_ODDS_MAX=0"
-            echo "F_EXCLUDE_FIRST1=false"
-            echo "F_ONLY_FIRST1=false"
-          } > defaults.out
-          : > kv.out
-          [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS"
+          python - <<'PY'
+import os, json
+p = os.environ.get("PIDS_IN","").strip()
+if p:
+    arr = [x.strip() for x in p.split(",") if x.strip()]
+else:
+    arr = [f"{i:02d}" for i in range(1,25)]
+js = json.dumps([{"pid":x} for x in arr], ensure_ascii=False)
+print(f"pids_json={js}")
+with open(os.environ["GITHUB_OUTPUT"],"a",encoding="utf-8") as f:
+    f.write(f"pids_json={js}\n")
+PY
 
-          # merge kv → outputs（prefix付与）
-          source defaults.out
-          while IFS='=' read -r k v; do
-            case "$k" in
-              REQUIRE_ODDS)   echo "F_REQUIRE_ODDS=$v"   >> "$GITHUB_OUTPUT" ;;
-              MIN_EV)         echo "F_MIN_EV=$v"         >> "$GITHUB_OUTPUT" ;;
-              ODDS_BANDS)     echo "F_ODDS_BANDS=$v"     >> "$GITHUB_OUTPUT" ;;
-              ODDS_MIN)       echo "F_ODDS_MIN=$v"       >> "$GITHUB_OUTPUT" ;;
-              ODDS_MAX)       echo "F_ODDS_MAX=$v"       >> "$GITHUB_OUTPUT" ;;
-              EXCLUDE_FIRST1) echo "F_EXCLUDE_FIRST1=$v" >> "$GITHUB_OUTPUT" ;;
-              ONLY_FIRST1)    echo "F_ONLY_FIRST1=$v"    >> "$GITHUB_OUTPUT" ;;
-            esac
-          done < kv.out
-          # ensure defaults applied if not set by kv
-          for k in F_REQUIRE_ODDS F_MIN_EV F_ODDS_BANDS F_ODDS_MIN F_ODDS_MAX F_EXCLUDE_FIRST1 F_ONLY_FIRST1; do
-            if ! grep -q "^$k=" "$GITHUB_OUTPUT"; then
-              val="$(grep "^$k=" defaults.out | head -n1 | cut -d= -f2-)"
-              echo "$k=$val" >> "$GITHUB_OUTPUT"
-            fi
-          done
-
-  # Pass1: ML 予測（B）
   pass1:
-    needs: [normalize-parse]
-    uses: ./.github/workflows/wf_pass1_ml_predict.yml
-    with:
-      DATE:  ${{ inputs.DATE }}
-      PID:   ${{ needs.normalize-parse.outputs.PID_EXP }}
-      # RACE は空＝全レース
-      RACE:  ""
-      # 既定スクリプト/モデル日付はワークフロー内デフォルトに任せる
-
-  # Pass2: simsv2（キーマン無し）+ ML 合成で再シム（A’）
-  pass2:
-    needs: [normalize-parse, pass1]
-    uses: ./.github/workflows/wf_pass2_simsv2_mlmerge.yml
-    with:
-      DATE:  ${{ inputs.DATE }}
-      PID:   ${{ needs.normalize-parse.outputs.PID_EXP }}
-      MODE:  ${{ inputs.MODE }}
-      SIMS:  ${{ inputs.SIMS }}
-      TOPN:  ${{ inputs.TOPN }}
-      UNIT:  ${{ inputs.UNIT }}
-      OUTDIR: ${{ inputs.OUTDIR }}
-      # フィルタ（キーマン無し）
-      F_REQUIRE_ODDS:   ${{ needs.normalize-parse.outputs.F_REQUIRE_ODDS }}
-      F_MIN_EV:         ${{ needs.normalize-parse.outputs.F_MIN_EV }}
-      F_ODDS_BANDS:     ${{ needs.normalize-parse.outputs.F_ODDS_BANDS }}
-      F_ODDS_MIN:       ${{ needs.normalize-parse.outputs.F_ODDS_MIN }}
-      F_ODDS_MAX:       ${{ needs.normalize-parse.outputs.F_ODDS_MAX }}
-      F_EXCLUDE_FIRST1: ${{ needs.normalize-parse.outputs.F_EXCLUDE_FIRST1 }}
-      F_ONLY_FIRST1:    ${{ needs.normalize-parse.outputs.F_ONLY_FIRST1 }}
-
-  # 収集: per_race_results.csv を集計して overall.json を常に上書き
-  aggregate:
-    needs: [normalize-parse, pass2]
     runs-on: ubuntu-latest
+    needs: prepare
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJson(needs.prepare.outputs.pid_list) }}
+    env:
+      DATE:   ${{ inputs.DATE }}
+      PID:    ${{ matrix.pid }}
+      SIMS:   ${{ inputs.SIMS }}
+      TOPN:   ${{ inputs.TOPN }}
+      UNIT:   ${{ inputs.UNIT }}
+      OUTDIR: ${{ inputs.OUTDIR }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Aggregate & write overall.json (robust)
-        env:
-          OUTDIR: ${{ inputs.OUTDIR }}
-          DATE:   ${{ inputs.DATE }}
-          MODE:   ${{ inputs.MODE }}
-          UNIT:   ${{ inputs.UNIT }}
-          SIMS:   ${{ inputs.SIMS }}
-          TOPN:   ${{ inputs.TOPN }}
-          PID:    ${{ needs.normalize-parse.outputs.PID_EXP }}
-          # filters
-          F_REQUIRE_ODDS:   ${{ needs.normalize-parse.outputs.F_REQUIRE_ODDS }}
-          F_MIN_EV:         ${{ needs.normalize-parse.outputs.F_MIN_EV }}
-          F_ODDS_BANDS:     ${{ needs.normalize-parse.outputs.F_ODDS_BANDS }}
-          F_ODDS_MIN:       ${{ needs.normalize-parse.outputs.F_ODDS_MIN }}
-          F_ODDS_MAX:       ${{ needs.normalize-parse.outputs.F_ODDS_MAX }}
-          F_EXCLUDE_FIRST1: ${{ needs.normalize-parse.outputs.F_EXCLUDE_FIRST1 }}
-          F_ONLY_FIRST1:    ${{ needs.normalize-parse.outputs.F_ONLY_FIRST1 }}
-        shell: bash
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install numpy pandas joblib scikit-learn
+
+      - name: Run simsv2 (predict-only, no keyman)
         run: |
           set -euo pipefail
-          python - <<'PY'
-import os, json, csv
-from pathlib import Path
+          echo "[pass1] DATE=$DATE PID=$PID SIMS=$SIMS TOPN=$TOPN OUTDIR=$OUTDIR"
+          python scripts/sims/simsv2.py \
+            --base public \
+            --dates "$DATE" \
+            --pids "$PID" \
+            --sims "$SIMS" \
+            --topn "$TOPN" \
+            --unit "$UNIT" \
+            --predict-only \
+            --outdir "$OUTDIR"
 
-OUTDIR  = os.environ["OUTDIR"]
-DATE    = os.environ["DATE"]
-MODE    = os.environ["MODE"]
-UNIT    = int(float(os.environ["UNIT"]))
-SIMS    = int(os.environ["SIMS"])
-TOPN    = int(os.environ["TOPN"])
-PID     = os.environ["PID"]
-
-def tf(x:str)->bool:
-    return str(x).strip().lower() == "true"
-
-filters = {
-  "require_odds": tf(os.environ.get("F_REQUIRE_ODDS","false")),
-  "min_ev": float(os.environ.get("F_MIN_EV","0") or 0),
-  "odds_bands": os.environ.get("F_ODDS_BANDS","") or "",
-  "odds_min": float(os.environ.get("F_ODDS_MIN","0") or 0),
-  "odds_max": float(os.environ.get("F_ODDS_MAX","0") or 0),
-  "exclude_first1": tf(os.environ.get("F_EXCLUDE_FIRST1","false")),
-  "only_first1": tf(os.environ.get("F_ONLY_FIRST1","false")),
-}
-
-pass2 = Path(OUTDIR) / "pass2"
-pass2.mkdir(parents=True, exist_ok=True)
-csv_path = pass2 / "per_race_results.csv"
-
-races=bets=stake=payout=hits=0
-if csv_path.exists():
-    with csv_path.open(newline='', encoding='utf-8') as f:
-        rd = csv.DictReader(f)
-        for r in rd:
-            races += 1
-            b = int(float(r.get("bets") or 0)); bets += b
-            s = int(float(r.get("stake") or 0)); stake += s
-            p = int(float(r.get("payout") or 0)); payout += p
-            h = int(float(r.get("hit") or 0)); hits += h
-
-hit_rate = (hits / races) if races else 0.0
-roi = ((payout-stake)/stake) if stake>0 else 0.0
-
-overall = {
-  "date": DATE, "mode": MODE, "pid": PID,
-  "races": int(races), "bets_total": int(bets), "unit": int(UNIT),
-  "stake_total": int(stake), "hits": int(hits), "hit_rate": float(hit_rate),
-  "payout_total": int(payout), "roi": float(roi),
-  "options": {
-    "sims": int(SIMS), "topn": int(TOPN),
-    "filters": filters
-  }
-}
-(out_path := pass2/"overall.json").write_text(json.dumps(overall, ensure_ascii=False, indent=2), encoding="utf-8")
-print(f"[overall] wrote {out_path}")
-PY
-
-      - name: Commit results into repo
-        if: always()
-        shell: bash
-        run: |
-          set -e
-          git config user.name  github-actions
-          git config user.email github-actions@github.com
-          git add ${{ inputs.OUTDIR }}/pass2 || true
-          git commit -m "pipeline: overall.json for ${{ inputs.DATE }} PID=${{ needs.normalize-parse.outputs.PID_EXP }}" || echo "nothing to commit"
-          git pull --rebase || true
-          git push || true
-
-      - name: Upload artifacts
+      - name: Upload artifacts (per PID)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: sims_pipeline_outputs_${{ inputs.DATE }}_${{ needs.normalize-parse.outputs.PID_EXP }}
+          name: pass1_${{ env.DATE }}_${{ env.PID }}
           path: |
-            ${{ inputs.OUTDIR }}/pass2/**
+            ${{ env.OUTDIR }}/pass1/predict/**
+          if-no-files-found: warn
+
+  aggregate:
+    runs-on: ubuntu-latest
+    needs: pass1
+    env:
+      DATE:   ${{ inputs.DATE }}
+      SIMS:   ${{ inputs.SIMS }}
+      TOPN:   ${{ inputs.TOPN }}
+      UNIT:   ${{ inputs.UNIT }}
+      OUTDIR: ${{ inputs.OUTDIR }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas
+
+      - name: Aggregate predictions and write overall.json
+        run: |
+          set -euo pipefail
+          python - <<'PY'
+import os, json, glob, pandas as pd
+
+OUTDIR = os.environ["OUTDIR"]
+DATE   = os.environ["DATE"]
+SIMS   = int(os.environ["SIMS"])
+TOPN   = int(os.environ["TOPN"])
+UNIT   = int(os.environ["UNIT"])
+
+pass1 = os.path.join(OUTDIR,"pass1")
+pred_dir = os.path.join(pass1,"predict")
+os.makedirs(pass1, exist_ok=True)
+
+# 予測CSVの集計（存在すれば）
+rows = []
+for path in glob.glob(os.path.join(pred_dir, "predictions_summary.csv")):
+    try:
+        df = pd.read_csv(path)
+        rows.append(df)
+    except Exception:
+        pass
+
+races = 0
+bets_total = 0
+if rows:
+    df_all = pd.concat(rows, ignore_index=True)
+    races = df_all[["date","pid","race"]].drop_duplicates().shape[0]
+    bets_total = df_all["rank"].max() if "rank" in df_all else 0
+
+overall = {
+    "engine": "SimS ver1.0 (E1, no-keyman)",
+    "pass":   "pass1",
+    "races":  int(races),
+    "bets_total": int(bets_total),
+    "stake_total": int(bets_total * UNIT),
+    "payout_total": 0,
+    "hit_rate": 0.0,
+    "roi": 0.0,
+    "sims_per_race": int(SIMS),
+    "topn": int(TOPN),
+    "unit": int(UNIT),
+}
+
+out_path = os.path.join(pass1, "overall.json")
+with open(out_path, "w", encoding="utf-8") as f:
+    json.dump(overall, f, ensure_ascii=False, indent=2)
+print(f"[overall] wrote {out_path}")
+PY
+
+      - name: Commit aggregated results
+        if: always()
+        run: |
+          set -e
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add ${{ env.OUTDIR }}/pass1 || true
+          git commit -m "sims_pipeline: pass1 overall.json for ${DATE}" || echo "nothing to commit"
+          git pull --rebase || true
+          git push || true
+
+      - name: Upload overall.json
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pass1_overall_${{ env.DATE }}
+          path: ${{ env.OUTDIR }}/pass1/overall.json
+          if-no-files-found: warn
