--- a/.github/workflows/wf_pass1_pure.yml
+++ b/.github/workflows/wf_pass1_pure.yml
@@ -3,40 +3,13 @@ name: wf_pass1_pure
 on:
   workflow_dispatch:
     inputs:
-      DATE:
-        description: "YYYYMMDD"
-        required: true
-        type: string
-      PID:
-        description: "場ID(例: 02)"
-        required: true
-        type: string
-      MODE:
-        description: "predict or eval"
-        required: true
-        type: choice
-        options: ["predict", "eval"]
-        default: "predict"
-      SIMS:
-        description: "trials per race"
-        required: true
-        type: string
-        default: "600"
-      TOPN:
-        description: "top N trifecta"
-        required: true
-        type: string
-        default: "18"
-      UNIT:
-        description: "unit stake"
-        required: true
-        type: string
-        default: "100"
-      OUTDIR:
-        description: "output root"
-        required: true
-        type: string
-        default: "SimS_pure"
+      DATE:    { description: "YYYYMMDD (カンマ区切り複数可)", required: true, type: string }
+      PID:     { description: "場ID (例: 02, または ALL)", required: true, type: string }
+      MODE:    { description: "predict or eval", required: true, type: choice, options: ["predict","eval"], default: "predict" }
+      SIMS:    { description: "trials per race", required: true, type: string, default: "600" }
+      TOPN:    { description: "top N trifecta", required: true, type: string, default: "18" }
+      UNIT:    { description: "unit stake", required: true, type: string, default: "100" }
+      OUTDIR:  { description: "output root", required: true, type: string, default: "SimS_pure" }
 
 permissions:
   contents: write
@@ -55,6 +28,7 @@ jobs:
 
       - name: Install deps
         run: |
+          set -e
           python -m pip install --upgrade pip
           pip install numpy pandas
 
@@ -68,19 +42,23 @@ jobs:
           UNIT:   ${{ inputs.UNIT }}
           OUTDIR: ${{ inputs.OUTDIR }}
         run: |
-          set -e
-          ARGS="--base public --dates $DATE --pids $PID --sims $SIMS --topn $TOPN --unit $UNIT --outdir $OUTDIR"
+          set -euo pipefail
+          ARGS="--base public --dates $DATE --sims $SIMS --topn $TOPN --unit $UNIT --outdir $OUTDIR"
+          # PID が ALL でなければ付与
+          if [ "$PID" != "ALL" ]; then
+            ARGS="$ARGS --pids $PID"
+          fi
           if [ "$MODE" = "predict" ]; then
-            python sims_pure.py $ARGS --predict-only
+            python scripts/sims/sims_pure.py $ARGS --predict-only
           else
-            python sims_pure.py $ARGS
+            python scripts/sims/sims_pure.py $ARGS
           fi
 
       - name: Commit results
         if: always()
         run: |
           set -e
-          git config user.name "github-actions"
+          git config user.name  "github-actions"
           git config user.email "github-actions@github.com"
           git add "${{ inputs.OUTDIR }}/pass1" || true
           git commit -m "wf_pass1_pure: ${{ inputs.MODE }} for ${{ inputs.DATE }} PID=${{ inputs.PID }}" || echo "nothing to commit"
